# steam-server-manager

./: .gitignore  Cargo.toml  README.adoc  Rocket.toml
.circleci/: config.yml
migrations/2022-08-01-153021_create_steam_apps/: down.sql  up.sql
src/: cors.rs  db.rs  handlers.rs  install.rs  main.rs  schema.rs  service.rs  steam_apps.rs  storage.rs  types.rs
src/handlers/: apps.rs  mod.rs  server.rs  test.rs
test_data/: applist.json
