[package]
name = "steam-server-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config = { version = "0.13.0", features = ["toml"] }
diesel = { version = "1.4.8", features = ["sqlite"] }
serde = "1.0.136"
reqwest = "0.11.10"
serde_json = "1.0.79"
anyhow = "1.0.56"
regex = "1.5.5"
mockito = "0.31.0"
tempfile = "3.3.0"
unescape = "0.1.0"
tokio = { version = "1.17.0", features = ["full"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]
